force-app/main/default/objects/Apttus__Agreement_Term_Exception__c/fields/Apttus__Comments__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Comments__c</fullName>
    <description>Comments about this Term Exception in the context of this Agreement.</description>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>