force-app/main/default/objects/Apttus__Agreement_Term_Exception__c/fields/Apttus__Exception__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Exception__c</fullName>
    <description>Term Exception as detailed in Term Exception master table.</description>
    <label>Exception</label>
    <type>TextArea</type>
</CustomField>